...
      HStack {
        if isSecure {
          SecureField(
            "",
            text: $value.max(15),
            prompt:
            Text("Insira uma senha")
              .font(.custom(FontsApp.openLight, size: 14))
              .foregroundColor(ColorsApp.gray)
          )
          .font(.custom(FontsApp.openRegular, size: 16))
          .autocorrectionDisabled(true)
          .foregroundColor(ColorsApp.black)
...
