...

          Spacer()
        }

        Button(action: {}) {
          Spacer()
          Text("Comprar agora")
            .padding(.vertical, 10)
            .foregroundColor(ColorsApp.white)
            .onTapGesture {
              isNavigate.toggle()
              isPresented.toggle()
            }
...
