...
              }
            }

            .frame(minWidth: 0, maxWidth: .infinity, minHeight: 50)
          }
          .scrollBounceBehavior(.basedOnSize)
          .accessibilityIdentifier("GridHomeDestination")
        }
      }
      .padding(EdgeInsets(top: 10, leading: 20, bottom: 10, trailing: 20))
    }
    .scrollBounceBehavior(.basedOnSize)
    .onAppear {
...
