...
              .background(Color.black.opacity(0.2))
              .clipShape(Circle())
          }
        }
        .accessibilityIdentifier("ButtonAvatar")

        Text("Clique na imagem acima para selecionar uma foto")
          .font(.custom(FontsApp.openLight, size: 13))
          .foregroundColor(ColorsApp.gray)
          .padding(EdgeInsets(top: 5, leading: 0, bottom: 20, trailing: 0))
        Spacer()
        Form {
          TextFieldCommon(
...
