...
              .frame(width: 30, height: 30)
            Text("Perfil")
              .font(.custom(FontsApp.openLight, size: 16))
              .foregroundColor(ColorsApp.blue)
          }
        }
      }, isSelected: currentTag == .profille, nameIcon: "config")
    }
    .ignoresSafeArea(.all)
    .frame(minWidth: 0, maxWidth: .infinity, maxHeight: 50)
    .background(ColorsApp.white, ignoresSafeAreaEdges: .all)
  }
}
...
