...
        }
      }

      Spacer()
      ButtonCommon(action: {
        handleUpdate()
      }, title: "Atualizar", isLoading: isLoading)
    }
    .frame(maxWidth: .infinity, maxHeight: .infinity)
    .padding(.vertical, 15)
    .padding(.horizontal, 20)
    .background(ColorsApp.background, ignoresSafeAreaEdges: .all)
    .onDisappear {
...
